# gymcoach

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  check-lint.sh  docker-compose.yaml  lint.sh  pyproject.toml
.github/workflows/: backend.yml  deploy.yml  destroy.yml  docker-plan.yml  docker.yml  terraform-apply.yml  terraform-destroy.yml  terraform-plan.yml
src/: app.py  config.py
src/alembic/: env.py
src/alembic/versions/: 5f13d2883bf9_create_base_tables.py
src/endpoints/: health.py  routes.py
src/models/: plans.py
src/schemas/: plans.py
src/services/plans/: exercises.py  plans.py
src/utils/: db.py  dependencies.py  error_handling.py  exceptions.py
terraform/: .terraform.lock.hcl  alb-target_group.tf  alb.tf  asg.tf  ecr.tf  ecs-role.tf  ecs-security.tf  ecs.tf  main.tf  outputs.tf  providers.tf  rds.tf  rds_policies.tf  routing.tf  s3.tf  variables.tf
terraform/ecr/: providers.tf  variables.tf
tests/: conftest.py
tests/test_api/: conftest.py  test_plans.py
