[tool.poetry]
name = "gymcoach"
version = "0.1.0"
description = "Application for customizing gym plans"
authors = ["oskarkowalczyk <kowalczykoskar966@gmail.com>"]
package-mode=true

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.114.0"
sqlalchemy = "2.0.34"
psycopg2-binary = "*"
pydantic-settings = "^2.5.0"
asyncpg = "^0.29.0"
pytest-asyncio = "^0.24.0"
aiosqlite = "^0.20.0"
httpx = "^0.27.2"
pytest-mock = "^3.14.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
flake8 = "^3.8.4"
ruff = "^0.6.4"
ipdb = "^0.12"
alembic = "1.13.2"
pydantic = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"  # Ensures compatibility with Black's formatting
line_length = 88   # Same line length as Black
multi_line_output = 3  # Wrap imports into multiple lines when necessary
include_trailing_comma = true  # Add trailing commas to make Black happy
known_first_party = ["your_project"]  # Replace "your_project" with your module name
combine_as_imports = true

[tool.black]
line-length = 88  # Black's default line length
target-version = ['py38']  # Adjust to your Python version, e.g., py38, py39, etc.
skip-string-normalization = false  # By default, Black normalizes quotes

